Push/Hold partially working

--- a/Ball Brawl Project/Ball Brawl Project.csproj
+++ b/Ball Brawl Project/Ball Brawl Project.csproj
@@ -225,6 +225,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\BallBehaviourScript.cs" />
+    <Compile Include="Assets\Scripts\BallCollisionScript.cs" />
     <Compile Include="Assets\Scripts\BallInteractionScript.cs" />
     <Compile Include="Assets\Scripts\BallSpawnerScript.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
