Some bugfixes, Sensitivity adjustments, network performance, improved timers, general player adjustments, ball bouncing adjustments, improved connection handling (when clients disconnect, then can connect and play the game normally again!!), ball network experiment (EXPERIMENT)

--- a/Ball Brawl Project/Ball Brawl Project.csproj
+++ b/Ball Brawl Project/Ball Brawl Project.csproj
@@ -275,6 +275,7 @@
     <Compile Include="Assets\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
     <Compile Include="Assets\Scripts\Ball\BallBehaviourScript.cs" />
     <Compile Include="Assets\Scripts\Ball\BallRotation.cs" />
+    <Compile Include="Assets\Scripts\Ball\FakeBallScript.cs" />
     <Compile Include="Assets\Scripts\Goal\GoalScript.cs" />
     <Compile Include="Assets\Scripts\Hud\NetworkHUD.cs" />
     <Compile Include="Assets\Scripts\Managers\BallSpawnerScript.cs" />
