--- a/Ball Brawl Project/Ball Brawl Project.Editor.Plugins.csproj
+++ b/Ball Brawl Project/Ball Brawl Project.Editor.Plugins.csproj
@@ -270,13 +270,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Ball Brawl Project.csproj">
-      <Project>{6968E52F-AC9C-90CA-6E58-373AE746E254}</Project>
-      <Name>Ball Brawl Project</Name>
-    </ProjectReference>
     <ProjectReference Include="Ball Brawl Project.Plugins.csproj">
       <Project>{AA598749-4FC0-41E7-2EC1-C997012EA339}</Project>
       <Name>Ball Brawl Project.Plugins</Name>
+    </ProjectReference>
+    <ProjectReference Include="Ball Brawl Project.csproj">
+      <Project>{6968E52F-AC9C-90CA-6E58-373AE746E254}</Project>
+      <Name>Ball Brawl Project</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -449,6 +449,7 @@
     <None Include="Assets\Shaders\CrowdShader.shader" />
     <None Include="Assets\Shaders\MovingPatternShader.shader" />
     <None Include="Assets\Shaders\RimShader.shader" />
+    <None Include="Assets\Shaders\ShieldShader.shader" />
     <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
     <None Include="Assets\Standard Assets\Characters\RollerBall\RollerBallGuidelines.txt" />
     <None Include="Assets\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
